--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,10 @@
         {
             "src": "/(.*)",
             "dest": "src/main.ts",
-            "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 }
